<resources>
    <string name="app_name" translatable="false">Citizen-U</string>
    <string name="authentication_activity_label" translatable="false">Authentication Activity</string>
    <string name="main_activity_label" translatable="false">Main Activity</string>
    <string name="generic_email_hint" translatable="false">Email</string>
    <string name="generic_cnp_hint" translatable="false">CNP</string>
    <string name="generic_password_hint">Password</string>
    <string name="generic_firstname_hint">First Name</string>
    <string name="generic_lastname_hint">Last Name</string>
    <string name="date_separator_label" translatable="false">-</string>
    <string name="generic_category_label">Category</string>
    <string name="generic_description_label">Description</string>
    <string name="generic_motivation_label">Motivation</string>
    <string name="generic_address_label">Address</string>
    <string name="generic_location_label">Address</string>
    <string name="generic_posted_on_label">Posted on</string>
    <string name="generic_neighborhood_label">Neighborhood</string>
    <string name="generic_time_interval_label">Time interval</string>
    <string name="generic_start_date_label">Start Date</string>
    <string name="generic_end_date_label">End Date</string>
    <string name="generic_date_of_birth_label">Date of birth</string>
    <string name="generic_number_of_votes_label">Number of votes</string>
    <string name="generic_posted_by">Posted by</string>
    <string name="generic_status_label">Status</string>
    <string name="generic_value_label">Value</string>
    <string name="generic_other_citizens_comments_label">Other citizens opinions</string>
    <string name="generic_next_button">Next</string>
    <string name="attachment_title_hint">Title</string>
    <string name="attachment_optional_description_hint">Description (Optional)</string>
    <string name="generic_add_button">Add</string>
    <string name="add_image_button">Add the image</string>
    <string name="add_pdf_button">Add the PDF file</string>
    <string name="welcome_fragment_label" translatable="false">Welcome</string>
    <string name="welcome_sign_in_button">Sign In</string>
    <string name="welcome_sign_in_textview">Cluj-Napoca City Hall</string>
    <string name="welcome_register_button">Register</string>
    <string name="welcome_reset_password_textview">Forgot your password?</string>
    <string name="reset_password_dialog_positive_button">Send Password Reset email</string>
    <string name="multistep_register_create_account_textview">Create Account</string>
    <string name="multistep_register_next_button">Next</string>
    <string name="multistep_register_fragment_label" translatable="false">Create Account</string>
    <string name="multistep_register_create_account_button">Create Account</string>
    <string name="multistep_register_identity_information_label" translatable="false">Identity Information</string>
    <string name="multistep_register_identity_information_textview">Personal information</string>
    <string name="signed_in_fragment_label">Home</string>
    <string name="signed_in_your_account_textview" translatable="false">Welcome</string>
    <string name="signed_in_your_account_textview_params">Welcome, %s</string>
    <string name="signed_in_your_account_textview_tools" translatable="false">Welcome, Cosmin</string>
    <string name="signed_in_logout_button">Sign Out</string>
    <string name="generic_undefined_value" translatable="false">undefined</string>
    <string name="signed_in_view_public_events_button">View public events</string>
    <string name="signed_in_view_public_release_events_button">View public releases</string>
    <string name="public_events_list_fragment_label">Public Events</string>
    <string name="public_event_details_fragment_label" translatable="false">Public Event Details</string>
    <string name="events_list_principal_textview">Upcoming events</string>
    <string name="public_release_events_list_fragment_label">Public Releases</string>
    <string name="public_release_event_details_fragment_label" translatable="false">Public Releases Details</string>
    <string name="event_headline_tools_text" translatable="false">The general budget of Cluj-Napoca municipality this year is worth 434,484,383 euros, an increase of 1.13% compared to last year.</string>
    <string name="public_release_events_list_principal_textview">Public releases</string>
    <string name="periodic_event_generic_title" translatable="false">Recurrent Event</string>
    <string name="report_incident_fragment_label">Report Incident</string>
    <string name="citizen_reported_incidents_list_fragment_label">Your reported incidents</string>
    <string name="other_citizens_reported_incidents_list_fragment_label">Others reported incidents</string>
    <string name="reported_incidents_analysis_fragment_label">Reported Incidents Analysis</string>
    <string name="generate_reports_reported_incidents_fragment_label">Generate Reports</string>
    <string name="report_incident_text">Report incident</string>
    <string name="send_report_button_text">Send report</string>
    <string name="take_photo_button_text">Take a photo</string>
    <string name="take_another_photo_button_text">Take another photo</string>
    <string name="incident_description_hint">Please provide a description…</string>
    <string name="incident_headline_hint">Please provide a short headline…</string>
    <string name="incident_photo_hint">Please take a picture of the incident…</string>
    <string name="add_comment_hint">Add a new comment</string>
    <string name="incident_category_dropdown_hint">Incident Category</string>
    <string name="add_comment_button_text">Add comment</string>
    <string name="view_documents_button_text">View documents</string>
    <string name="generate_reports_button">Generate reports</string>
    <string name="generated_report_text">Generated report</string>
    <string name="reports_category_all_hint">All categories</string>
    <string name="reports_neighborhoods_all_hint">All neighborhoods</string>
    <string name="reports_date_today_hint">Today</string>
    <string name="generate_pdf_button_text">Generate PDF</string>
    <string name="view_incidents_on_map_button_text">View on map</string>
    <string name="reports_found">reported incidents found</string>
    <string-array name="neighborhoods">
        <item>All neighborhoods</item>
        <item>Andrei Mureșanu</item>
        <item>Becaș</item>
        <item>Borhanci</item>
        <item>Bulgaria</item>
        <item>Bună Ziua</item>
        <item>Centru</item>
        <item>Dâmbul Rotund</item>
        <item>Europa</item>
        <item>Făget</item>
        <item>Gheorgheni</item>
        <item>Grădini Mănăștur</item>
        <item>Grigorescu</item>
        <item>Gruia</item>
        <item>Iris</item>
        <item>Între Lacuri</item>
        <item>Mănăștur</item>
        <item>Someșeni</item>
        <item>Sopor</item>
        <item>Zorilor</item>
    </string-array>
    <string name="language_header">Language</string>
    <string name="language_title">Current language</string>
    <string name="settings_fragment_label" translatable="false">Settings</string>
    <string name="settings_notifications_summary_off_text">Now you do not receive any notifications</string>
    <string name="settings_notification_summary_on_text">Now you receive all notifications</string>
    <string name="settings_notifications_title">Enable notifications</string>
    <string name="settings_notifications_category_title">Notifications</string>
    <string name="english_language_label">English</string>
    <string name="romanian_language_label">Romanian</string>
    <string name="hungarian_language_label">Hungarian</string>
    <string name="citizen_proposed_projects_list_fragment_label">Your proposed projects</string>
    <string name="others_citizens_proposed_projects_list_fragment_label">Others proposed projects</string>
    <string name="propose_project_text">Project Proposal</string>
    <string name="upload_pdf_button_text">Upload PDF file</string>
    <string name="upload_another_pdf_button_text">Upload another PDF file</string>
    <string name="upload_photo_button_text">Upload photo</string>
    <string name="upload_another_photo_button_text">Upload another photo</string>
    <string name="propose_project_final_button">Propose the project</string>
    <string name="project_proposal_text">Propose a project</string>
    <string name="project_category_hint">Project Category</string>
    <string name="project_title_hint">Project Title</string>
    <string name="project_motivation_hint">Why should it be implemented?</string>
    <string name="project_location_hint">Project Location</string>
    <string name="project_description_hint">Project Description</string>
    <string name="project_proposal_vote_button_text">Vote</string>
    <string name="project_proposal_unvote_button_text">Undo vote</string>
    <string name="proposed_project_votes_label">votes</string>
    <string name="view_content_project_proposal_button">Back to content</string>
    <string-array name="project_categories">
        <item>Mobility and accessibility</item>
        <item>Infrastructure</item>
        <item>Sidewalks and pedestrian areas</item>
        <item>Public areas design</item>
        <item>Green spaces and playgrounds</item>
    </string-array>
    <string name="public_spending_fragment_label">Public Spending</string>
    <string name="public_spending_fragment_button_text">View Public Spending</string>
    <string name="public_spending_list_fragment_label">Public Spending List</string>
    <string name="public_spending_textview">Public Spending</string>
    <string name="public_spending_by_source_of_funding_label">Public Spending by Source of Funding</string>
    <string name="public_spending_by_source_of_category_label">Public Spending by Category</string>
    <string name="public_spending_button_source_of_funding_text">View by source of funding</string>
    <string name="public_spending_button_category_text">View by category</string>
    <string name="view_public_spending_button_text">View public spending</string>
    <string name="public_spending_completion_date_label">Completion date</string>
    <string name="public_spending_category_hint">Public spending category</string>
    <string name="public_spending_status_hint">Public spending status</string>
    <string name="public_spending_completion_year_hint">Public spending completion year</string>
    <string name="public_spending_all_statuses_all_hint">All statuses</string>
    <string name="public_spending_all_categories_all_hint">All categories</string>
    <string name="public_spending_all_years_all_hint">All years</string>
    <string-array name="statuses">
        <item>All statuses</item>
        <item>In progress</item>
        <item>Completed</item>
        <item>Delayed</item>
        <item>Postponed</item>
    </string-array>
    <string-array name="public_spending_categories">
        <item>All categories</item>
        <item>Road infrastructure projects</item>
        <item>Public transport projects</item>
        <item>Green energy projects</item>
        <item>Cultural center projects</item>
        <item>Building construction and rehabilitation projects</item>
        <item>Medical unit projects</item>
        <item>Sports and recreation projects</item>
        <item>School and kindergarten projects</item>
        <item>Social center projects</item>
    </string-array>
    <string name="city_hall_name">Cluj-Napoca City Hall</string>
    <string name="city_hall_full_Name">Cluj-Napoca City Hall and Local Council</string>
    <string name="DEFAULT_ERROR_MESSAGE">An unexpected error has occurred!</string>
    <string name="DEFAULT_ERROR_MESSAGE_PLEASE_TRY_AGAIN">An unexpected error has occurred! Please try again!</string>
</resources>