<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.ubb.citizen_u.ui.fragments.WelcomeFragment"
        android:label="@string/welcome_fragment_label"
        tools:layout="@layout/fragment_welcome">

        <action
            android:id="@+id/action_welcomeFragment_to_signedInMockupFragment"
            app:destination="@id/signedInMockupFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/signedInMockupFragment"
        android:name="com.ubb.citizen_u.ui.fragments.SignedInMockupFragment"
        android:label="@string/signed_in_fragment_label"
        tools:layout="@layout/fragment_signed_in_mockup">

        <action
            android:id="@+id/action_signedInMockupFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_signedInMockupFragment_to_eventsListFragment"
            app:destination="@id/publicEventsListFragment" />
        <argument
            android:name="connectedUserId"
            app:argType="string" />
        <action
            android:id="@+id/action_signedInMockupFragment_to_councilMeetEventsListFragment"
            app:destination="@id/councilMeetEventsListFragment" />
        <action
            android:id="@+id/action_signedInMockupFragment_to_reportIncidentFragment"
            app:destination="@id/reportIncidentFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.ubb.citizen_u.ui.fragments.RegisterFragment"
        android:label="@string/multistep_register_fragment_label"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_identityInformationFragment"
            app:destination="@id/identityInformationFragment" />
    </fragment>
    <fragment
        android:id="@+id/identityInformationFragment"
        android:name="com.ubb.citizen_u.ui.fragments.multistep.registration.IdentityInformationFragment"
        android:label="@string/multistep_register_identity_information_label"
        tools:layout="@layout/fragment_identity_information">
        <action
            android:id="@+id/action_identityInformationFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="email"
            android:defaultValue="undefined"
            app:argType="string" />
        <argument
            android:name="password"
            android:defaultValue="undefined"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/publicEventsListFragment"
        android:name="com.ubb.citizen_u.ui.fragments.events.PublicEventsListFragment"
        android:label="@string/public_events_list_fragment_label"
        tools:layout="@layout/fragment_public_events_list">
        <action
            android:id="@+id/action_eventsListFragment_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/eventDetailsFragment"
        android:name="com.ubb.citizen_u.ui.fragments.events.PublicEventDetailsFragment"
        android:label="@string/public_event_details_fragment_label"
        tools:layout="@layout/fragment_public_event_details">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/councilMeetEventsListFragment"
        android:name="com.ubb.citizen_u.ui.fragments.events.CouncilMeetEventsListFragment"
        android:label="@string/council_meet_events_list_fragment_label"
        tools:layout="@layout/fragment_council_meet_events_list" />
    <fragment
        android:id="@+id/reportIncidentFragment"
        android:name="com.ubb.citizen_u.ui.fragments.multistep.reports.ReportIncidentDetailsFragment"
        android:label="@string/report_incident_fragment_label"
        tools:layout="@layout/fragment_report_incident_details">
        <argument
            android:name="citizenId"
            app:argType="string" />
        <action
            android:id="@+id/action_reportIncidentFragment_to_reportIncidentPhotoFragment"
            app:destination="@id/reportIncidentPhotoFragment" />
    </fragment>
    <fragment
        android:id="@+id/reportIncidentPhotoFragment"
        android:name="com.ubb.citizen_u.ui.fragments.multistep.reports.ReportIncidentPhotoFragment"
        android:label="@string/report_incident_fragment_label"
        tools:layout="@layout/fragment_report_incident_photo">
        <argument
            android:name="incidentDescription"
            app:argType="string" />
        <argument
            android:name="citizenId"
            app:argType="string" />
        <action
            android:id="@+id/action_reportIncidentPhotoFragment_to_reportIncidentMapFragment"
            app:destination="@id/reportIncidentMapFragment" />
    </fragment>
    <fragment
        android:id="@+id/reportIncidentMapFragment"
        android:name="com.ubb.citizen_u.ui.fragments.multistep.reports.ReportIncidentMapFragment"
        android:label="@string/report_incident_fragment_label"
        tools:layout="@layout/fragment_report_incident_map">
        <argument
            android:name="incidentDescription"
            app:argType="string" />
        <argument
            android:name="citizenId"
            app:argType="string" />
        <action
            android:id="@+id/action_reportIncidentMapFragment_to_signedInMockupFragment"
            app:destination="@id/signedInMockupFragment"
            app:popUpTo="@id/signedInMockupFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>